--- a/styles/movie-info.module.css
+++ b/styles/movie-info.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  gap: 50px;
+  gap: 30px;
   width: 80%;
   margin: 0 auto;
 }
@@ -9,7 +9,6 @@
 .poster {
   border-radius: 20px;
   max-width: 70%;
-  place-self: center;
 }
 
 .title {
@@ -23,4 +22,8 @@
   flex-direction: column;
   margin-top: 20px;
   gap: 20px;
+}
+
+.credit {
+  margin-bottom: 10px;
 }
